feat: apply spotless formatting
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>